Add redirects from feed path segments
GitHub creates a clickable link when the README viewer renders the feed
URI (https://jksh.github.io/LQ-Bindings/feeds/win_x86/ ). Clicking on
this link leads to an Error 404, which doesn't look nice.

--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,7 @@ header_pages:
   - docs/development.md
 theme: minima
 plugins:
+  - jekyll-redirect-from
+  - jekyll-seo-tag
   - jekyll-sitemap
 google_analytics: UA-131500055-3
