Update supported platforms
- Qt 5.12 can run on NI Linux RT 19.0 or newer (older versions don't provide
  libxcbcommon)
- Bump minimum version of LabVIEW to 2016, which is the oldest that is supported
  by NI CompactRIO 19.0 [1])

Also fix incorrect dependency string for LabVIEW 2018

[1] https://www.ni.com/en-au/support/documentation/compatibility/20/compactrio-device-driver-and-labview-version-compatibility-.html

--- a/utils/Packaging/data/LabVIEW Dependency Strings.ini
+++ b/utils/Packaging/data/LabVIEW Dependency Strings.ini
@@ -18,5 +18,17 @@ x86="aa4b25c0-a1f6-472e-8f76-32e406b7e44d (>=17.0.0) | 7a80ea72-c69d-4740-afbf-3
 x64="77a907d8-6d34-42ac-be29-e623b120e25f (>=17.0.0) | 3368b8cb-7a66-429a-b3f9-726fa133271b (>=17.1.0)"
 
 [2018]
-x86="ni-labview-2018-core-x86-en"
-x64="ni-labview-2018-core-x64-en"
+x86="ni-labview-2018-x86 (>=18.0.0)"
+x64="ni-labview-2018 (>=18.0.0)"
+
+[2019]
+x86="ni-labview-2019-x86 (>=19.0.0)"
+x64="ni-labview-2019 (>=19.0.0)"
+
+[2020]
+x86="ni-labview-2020-x86 (>=20.0.0)"
+x64="ni-labview-2020 (>=20.0.0)"
+
+[2021]
+x86="ni-labview-2021-x86 (>=21.0.0)"
+x64="ni-labview-2021 (>=21.0.0)"
