--- a/utils/Packaging/data/template-variables-win.ini
+++ b/utils/Packaging/data/template-variables-win.ini
@@ -1,5 +1,5 @@
 [dev]
-PKG_DEPENDENCIES="lq-runtime-%PKG_ARCH%, %LV_DEPENDENCY_STR%"
+PKG_DEPENDENCIES="lq-runtime-%PKG_ARCH% (>=%LQ_VERSION%), %LV_DEPENDENCY_STR%"
 PKG_DESCRIPTION="LabVIEW bindings for the Qt toolkit\n  LabVIEW bindings for the Qt toolkit."
 PKG_DISPLAY_NAME="LQ for LabVIEW %LV_VERSION%"
 PKG_NAME="lq-dev-lv%LV_VERSION%-%PKG_ARCH%"
