[GH Pages] Add setup instructions for NI Linux RT
Includes .conf file for manually configuring opkg feed

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,7 @@ author: Sze Howe Koh
 email: szehowe.koh@gmail.com
 header_pages:
   - quickstart.md
+  - setup-nilrt.md
   - development.md
 theme: minima
 plugins:
