--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ description: LQ lets LabVIEW programmers create dynamic, flexible, and powerful 
 author: Sze Howe Koh
 email: szehowe.koh@gmail.com
 header_pages:
-  - quickstart.md
+  - setup-win.md
   - setup-nilrt.md
   - development.md
 theme: minima
